examples/test/testpolicy19176.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19176
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key17: value14
      key25: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value20
      podSelector:
        matchLabels:
          key18: value9
          key3: value46
